# table_cleanup

./: README.md  pyproject.toml  table_to_md.py
